# deep-profiling-python

./: README.md
poc_cprofile/: README.md  main.py  pyproject.toml
poc_cprofile/basic_usage/: input.txt  main.py  output.prof
poc_line_profiler/: README.md  pyproject.toml
poc_line_profiler/basic_usage/: main.py
poc_line_profiler/custom_usage/: inmemory.py  main.py  models.py
poc_line_profiler/output/: basic_usage.lprof  custom_usage.lprof
poc_profyle/: README.md  main.py  pyproject.toml
poc_py_spy/: README.md  main.py  pyproject.toml
poc_timer/: README.md
poc_timer/basic_usage/: main.py
poc_timer/complex_usage/: main.py
